added another html page the returns noinput error

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,8 +6,8 @@
 
 body {
     padding: 2rem;
-    background-color: #2e6179;
-    color: rgb(97, 7, 7);
+    background-color: #c9cbcc;
+    color: rgb(23, 11, 158);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
