--- a/templates/noinput.html
+++ b/templates/noinput.html
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h1>This page was created to help you check </h1>
-    <h1>the weather conditions in any city in the world.</h1>
+    <h1>You have not entered any city name. Please try again.</h1>
     <form action="/weather">
         <input type="text" name="city" id="city" placeholder="Type the city name" />
         <button type="submit">Show</button>
