combined the weather.py and server.py file and deleted weather.py file. Also modified the styles and the templates folder

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,8 +6,8 @@
 
 body {
     padding: 2rem;
-    background-color: #c9cbcc;
-    color: rgb(23, 11, 158);
+    background-color: #0d71a7;
+    color: rgb(204, 152, 7);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
