--- a/templates/noinput.html
+++ b/templates/noinput.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-    <h1>You have not entered any city name. Please try again.</h1>
-    <form action="/weather">
-        <input type="text" name="city" id="city" placeholder="Type the city name" />
-        <button type="submit">Show</button>
-    </form>
+<h1>You have not entered any city name.</h1>
+<h1>Please try again.</h1>
+<form action="/weather">
+    <input type="text" name="city" id="city" placeholder="Type the city name" />
+    <button type="submit">Show</button>
+</form>
 </body>
-
 </html>
