--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>This page was created to help you check </h1>
+    <h1>This APP helps you to check </h1>
     <h1>the weather conditions in any city in the world.</h1>
     <form action="/weather">
         <input type="text" name="city" id="city" placeholder="Type the city name" />
